# quick-dock

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  Package.appxmanifest  build.rs  index.html  msix.ps1  package.json  pnpm-lock.yaml
capabilities/: default.json
src/: App.css  App.tsx  Edge.tsx  dragout.rs  index.css  main.rs  main.tsx  settings.rs  state.rs  sys.rs
src-js/components/: SettingsPanel.tsx  ShelfList.tsx
src-js/components/cards/: CardShell.tsx  FileCard.tsx  ImageCard.tsx  UrlCard.tsx
src-js/lib/: dragOut.ts
src-js/store/: shelf.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  dragout.rs  edge.rs  lib.rs  main.rs  settings.rs
src/components/cards/: CodeCard.tsx  FileCard.tsx  ImageCard.tsx  ItemCard.tsx  TextCard.tsx
src/lib/: highlight.ts
src/store/: eviction.ts  settings.ts  shelf.ts
ui/: app-window.slint
