[package]
name = "snap-shelf"
version = "1.0.0"
description = "SnapShelf — a transparent staging shelf for Windows"
authors = ["zulab"]
edition = "2021"

[build-dependencies]
lucide-slint = "1.20.0"
slint-build = "1.16.1"
winresource = "0.1.31"

[dependencies]
slint = { version = "1.16.1", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2", "std", "unstable-winit-030"] }
window-vibrancy = "0.7.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
drag = "2.1.1"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_UI_Shell", "Win32_Graphics_Dwm"] }
tray-icon = "0.24.1"
raw-window-handle = "0.6.2"

[profile.release]
opt-level = "s"     # optimize for size
lto = true          # link-time optimization across crates
codegen-units = 1   # max cross-module optimization (slower compile)
strip = true        # strip debug symbols from binary
panic = "abort"     # drop unwind tables; smaller binary
