[package]
name = "snap-shelf"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snap_shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.7.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
drag = "2.1.1"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[profile.release]
opt-level = "s"     # optimize for size
lto = true          # link-time optimization across crates
codegen-units = 1   # max cross-module optimization (slower compile)
strip = true        # strip debug symbols from binary
panic = "abort"     # drop unwind tables; smaller binary
